<resources>
    <string name="app_name">ProjectUpa</string>
    <string name="string_login">LOGIN</string>
    <string name="string_login_link">Already have a username? Sign in here.</string>
    <string name="string_register">REGISTER</string>
    <string name="string_register_link">Not registered? Sign up here.</string>
    <string name="form_fullname">Full Name</string>
    <string name="form_fullname_helper">Enter name&#8230;</string>
    <string name="form_username">Username</string>
    <string name="form_username_helper">Enter username&#8230;</string>
    <string name="form_password">Password</string>
    <string name="form_password_helper">Enter password&#8230;</string>
    <string name="form_confirm_password">Confirm Password</string>
    <string name="form_confirm_password_helper">Re-enter password&#8230;</string>
    <string name="form_address">Address</string>
    <string name="form_address_helper">Enter address&#8230;</string>
    <string name="button_add_unit">Add New Unit</string>
    <string name="form_unit_codename">Unit Code</string>
    <string name="form_unit_tenants">Tenants</string>
    <string name="form_unit_waterbill">Water Bill</string>
    <string name="form_unit_electricbill">Electricity Bill</string>
    <string name="form_unit_rent">Rent</string>
    <string name="form_unit_submit">Submit</string>
    <string name="string_rent">Rent</string>
    <string name="string_electricity">Electricity</string>
    <string name="string_water">Water</string>
    <string name="title_option">Option</string>
    <string name="user_fullname">Full Name</string>
    <string name="addr_label">Address</string>
    <string name="string_done">Done</string>
    <string name="string_addUnit">ADD UNIT</string>
    <!-- Navbar Buttons-->
    <string name="string_home">HOME</string>
    <string name="string_profile">PROFILE</string>
    <string name="string_payable">PAYABLE</string>

    <!-- Main Activity -->
    <string name="project_title">PROJECT UPA</string>
    <string name="project_type">Landowner Management Tool</string>
    <string name="project_description">An Android application that lists all due bills and the total fee to be paid. It makes tracking of payments easier and convenient.</string>
</resources>
