<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="&lt; BACK"
        android:id="@+id/back_textview"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="UNIT 1 Occupants:"
        android:id="@+id/list_unit"
        android:layout_below="@+id/back_textview"
        android:layout_alignLeft="@+id/occupant_name1_textview"
        android:layout_alignStart="@+id/occupant_name1_textview"
        android:layout_marginTop="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Name1"
        android:id="@+id/occupant_name1_textview"
        android:layout_below="@+id/list_unit"
        android:layout_alignLeft="@+id/occupant_name2_textview"
        android:layout_alignStart="@+id/occupant_name2_textview"
        android:layout_marginTop="24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Name2"
        android:id="@+id/occupant_name2_textview"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/occupant_name1_textview"
        android:layout_alignRight="@+id/back_textview"
        android:layout_alignEnd="@+id/back_textview" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Name3"
        android:id="@+id/occupant_name3_textview"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/occupant_name2_textview"
        android:layout_alignLeft="@+id/occupant_name2_textview"
        android:layout_alignStart="@+id/occupant_name2_textview" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_rent"
        android:id="@+id/payable_rent_textview"
        android:layout_below="@+id/occupant_name3_textview"
        android:layout_alignLeft="@+id/occupant_name3_textview"
        android:layout_alignStart="@+id/occupant_name3_textview"
        android:layout_marginTop="42dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_electricity"
        android:id="@+id/payable_electricity_textview"
        android:layout_below="@+id/payable_rent_textview"
        android:layout_alignLeft="@+id/payable_rent_textview"
        android:layout_alignStart="@+id/payable_rent_textview"
        android:layout_marginTop="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_water"
        android:id="@+id/payable_water_textview"
        android:layout_below="@+id/payable_electricity_textview"
        android:layout_alignLeft="@+id/payable_electricity_textview"
        android:layout_alignStart="@+id/payable_electricity_textview"
        android:layout_marginTop="19dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/amount_rent_textview"
        android:layout_alignTop="@+id/payable_rent_textview"
        android:layout_toRightOf="@+id/list_unit"
        android:layout_toEndOf="@+id/list_unit"
        android:text="rent amount" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="electricity amount"
        android:id="@+id/amount_electricity_textview"
        android:layout_alignTop="@+id/payable_electricity_textview"
        android:layout_alignLeft="@+id/amount_rent_textview"
        android:layout_alignStart="@+id/amount_rent_textview" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="water amount"
        android:id="@+id/amount_water_textview"
        android:layout_alignTop="@+id/payable_water_textview"
        android:layout_alignLeft="@+id/amount_electricity_textview"
        android:layout_alignStart="@+id/amount_electricity_textview" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="TOTAL"
        android:id="@+id/payable_total_textview"
        android:layout_below="@+id/payable_water_textview"
        android:layout_alignLeft="@+id/payable_water_textview"
        android:layout_alignStart="@+id/payable_water_textview"
        android:layout_marginTop="41dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="total amount"
        android:id="@+id/amount_total_textview"
        android:layout_alignTop="@+id/payable_total_textview"
        android:layout_alignLeft="@+id/amount_water_textview"
        android:layout_alignStart="@+id/amount_water_textview" />

    <Button
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:text="@string/string_home"
        android:id="@+id/button"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/payable_total_textview"
        android:layout_toEndOf="@+id/payable_total_textview" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_payable"
        android:id="@+id/button2"
        android:layout_alignTop="@+id/button"
        android:layout_alignRight="@+id/amount_rent_textview"
        android:layout_alignEnd="@+id/amount_rent_textview" />

</RelativeLayout>