<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="458dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/string_rent"
                android:id="@+id/payable_rent_button"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/button"
                android:layout_toLeftOf="@+id/button"
                android:layout_weight="1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/string_electricity"
                android:id="@+id/payable_electricity_button"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_weight="1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/string_water"
                android:id="@+id/payable_water_button"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_toRightOf="@+id/payable_electricity_button"
                android:layout_toEndOf="@+id/payable_electricity_button"
                android:layout_weight="1" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="unit here"
            android:id="@+id/list_unit"
            android:layout_marginLeft="23dp"
            android:layout_marginStart="23dp"
            android:layout_marginTop="18dp"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.20" >

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="H"
            android:id="@+id/button7"
            android:layout_weight="1"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:layout_marginLeft="-5dip"
            android:layout_marginRight="-5dip"
            android:layout_marginTop="-5dip"
            android:layout_marginBottom="-5dip" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="PRO"
            android:id="@+id/button8"
            android:layout_weight="1"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:layout_marginLeft="-5dip"
            android:layout_marginRight="-5dip"
            android:layout_marginTop="-5dip"
            android:layout_marginBottom="-5dip"
            android:backgroundTint="@color/abc_secondary_text_material_light" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="PAY"
            android:id="@+id/button9"
            android:layout_weight="1"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:layout_marginLeft="-5dip"
            android:layout_marginRight="-5dip"
            android:layout_marginTop="-5dip"
            android:layout_marginBottom="-5dip" />
    </LinearLayout>

</LinearLayout>